--- a/JavaScript Challenges/Challenge 5.1/index.html
+++ b/JavaScript Challenges/Challenge 5.1/index.html
@@ -6,7 +6,29 @@
     <title>JS Challenge 5.1</title>
   </head>
   <body>
+    <form id="myForm">
+      <div class="form-group">
+        <label for="fullName">Full Name:</label>
+        <input type="text" id="fullName" name="fullName" required>
+      </div>
+      <div class="form-group">
+        <label for="email">Email Address:</label>
+        <input type="email" id="email" name="email" required>
+        <div id="emailError" style="color: red;"></div>
+      </div>
+      <div class="form-group">
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" required>
+      </div>
+      <div class="form-group">
+        <label for="confirmPassword">Confirm Password:</label>
+        <input type="password" id="confirmPassword" name="confirmPassword" required>
+        <div id="passwordMatchError" style="color: red;"></div>
+      </div>
+      <button type="submit">Submit</button>
+    </form>
     
+    <div id="successMessage" style="display: none; color: green;">Form submitted successfully!</div>
   </body>
   <script src="script.js"></script>
 </html>
